提供模糊着色工具，修复gradle问题